--- a/styles/index.html
+++ b/styles/index.html
@@ -50,10 +50,10 @@
                 <img src="imagens/deliciosos-graos-de-cafe-e-xicara.jpg" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="imagens/Design sem nome.png" alt="...">
+                <img src="imagens/istockphoto-1467199060-1024x1024.jpg" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="imagens/vista-da-xicara-de-cafe-com-espaco-para-texto.jpg" alt="...">
+                <img src="imagens/download.jpg" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -65,7 +65,8 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-
+          
+          <div class="testos">Espresso Elegante</div>
      </main>
      <footer>
 
